--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".FeedActivity"/>
+        <activity android:name=".DetailsActivity"/>
     </application>
 
 </manifest>
