--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".activities.MainActivity"/>
         <activity android:name=".FeedActivity"/>
-        <activity android:name=".DetailsActivity"/>
+        <activity android:name=".activities.DetailsActivity"/>
     </application>
 
 </manifest>
