--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation "androidx.appcompat:appcompat:${appCompatVersion}"
-    implementation "com.google.android.material:material:${designSupportVersion}"
+    implementation "com.google.android.material:material:1.4.0"
 }
