fix (cleaned code): cleaned code, refactored some methods and added comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/fileprovider" />
         </provider>
-        <activity android:name=".LoginActivity" android:theme="@style/Theme.InstagramNoBar">
+        <activity android:name=".activities.LoginActivity" android:theme="@style/Theme.InstagramNoBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
